Added output from today as demo of  output files produced

--- a/TikiProfilesTester.html
+++ b/TikiProfilesTester.html
@@ -154,8 +154,8 @@ for (vv in 1:length(Versions)) {
                          stringsAsFactors=FALSE
                          ) 
   
-#  for (ii in 1:dim(profilesList)[1]) { # ii counter of profile ID number
-    for (ii in 1:2) {
+  for (ii in 1:dim(profilesList)[1]) { # ii counter of profile ID number
+#    for (ii in 1:2) {
     #vv &lt;- 1;ii &lt;- 1;
   cat(paste0(&quot;** Profile (&quot;, ii, &quot;/&quot;, dim(profilesList)[1],&quot;): &quot;, profilesList[ii,paste0(&quot;ProfileName_&quot;, Versions[vv])], &quot;\n&quot;))
   
@@ -198,14 +198,105 @@ for (vv in 1:length(Versions)) {
 ## * Version: 12.x -------------------------------------- 
 ## ** Profile (1/32): Collaborative_Community_12x
 ## An error occurred: Column 'user' cannot be null** Profile (2/32): Company_Intranet_12x
-## 
+## ** Profile (3/32): Personal_Blog_and_Profile_12x
+## ** Profile (4/32): Small_Organization_Web_Presence_12x
+## ** Profile (5/32): Collaborative_Community_Wiki_menupage
+## ** Profile (6/32): Random_header_images
+## ** Profile (7/32): Multilingual_Wiki_12x
+## ** Profile (8/32): Countries_By_Region
+## ** Profile (9/32): Mobile
+## ** Profile (10/32): Slideshow_demo
+## ** Profile (11/32): Together
+## ** Profile (12/32): Post-it_Sticky_Note
+## ** Profile (13/32): Debug_Mode_Enabled
+## ** Profile (14/32): Debug_Mode_Disabled
+## ** Profile (15/32): User_Trackers
+## ** Profile (16/32): Custom_Contact_Form
+## ** Profile (17/32): Dynamic_items_list
+## ** Profile (18/32): Sortable Tables
+## ** Profile (19/32): Bug_Tracker
+## ** Profile (20/32): Time_Sheet
+## ** Profile (21/32): Tracker_as_Calendar_12 
+## ** Profile (22/32): Voting_System
+## ** Profile (23/32): Structured Master Documents
+## ** Profile (24/32): Consensus Forums
+## ** Profile (25/32): Barter_Market
+## ** Profile (26/32): Revision Approval
+## ** Profile (27/32): Shoping_Cart
+## ** Profile (28/32): Easy GeoBlog
+## ** Profile (29/32): Cartograf
+## ** Profile (30/32): R_demo
+## ** Profile (31/32): R_Heatmaps
+## ** Profile (32/32): Conditional_Display_in_Forms
+## PHP Parse error:  syntax error, unexpected ';' in /var/www/html/12.x/lib/core/Tracker/Field/Computed.php(125) : eval()'d code on line 1 PHP Parse error:  syntax error, unexpected ';' in /var/www/html/12.x/lib/core/Tracker/Field/Computed.php(125) : eval()'d code on line 1
 ## * Version: 14.x -------------------------------------- 
 ## ** Profile (1/32): Collaborative_Community_12x
 ## ** Profile (2/32): Company_Intranet_12x
-## 
+## ** Profile (3/32): Personal_Blog_and_Profile_12x
+## ** Profile (4/32): Small_Organization_Web_Presence_12x
+## ** Profile (5/32): Collaborative_Community_Wiki_menupage
+## ** Profile (6/32): Random_header_images_14
+## ** Profile (7/32): Multilingual_Wiki_12x
+## ** Profile (8/32): Countries_By_Region
+## ** Profile (9/32): Mobile
+## ** Profile (10/32): Slideshow_demo
+## ** Profile (11/32): Together
+## ** Profile (12/32): Post-it_Sticky_Note
+## ** Profile (13/32): Debug_Mode_Enabled
+## ** Profile (14/32): Debug_Mode_Disabled
+## ** Profile (15/32): User_Trackers
+## ** Profile (16/32): Custom_Contact_Form
+## ** Profile (17/32): Dynamic_items_list
+## ** Profile (18/32): Sortable Tables
+## ** Profile (19/32): Bug_Tracker
+## ** Profile (20/32): Time_Sheet
+## ** Profile (21/32): Tracker_as_Calendar_12 
+## ** Profile (22/32): Voting_System
+## ** Profile (23/32): Structured Master Documents
+## ** Profile (24/32): Consensus Forums
+## ** Profile (25/32): Barter_Market
+## ** Profile (26/32): Revision Approval
+## ** Profile (27/32): Shoping_Cart
+## ** Profile (28/32): Easy GeoBlog
+## ** Profile (29/32): Cartograf
+## ** Profile (30/32): R_demo
+## ** Profile (31/32): R_Heatmaps
+## ** Profile (32/32): Conditional_Display_in_Forms_14
+## PHP Parse error:  syntax error, unexpected ';' in /var/www/html/14.x/lib/core/Tracker/Field/Computed.php(125) : eval()'d code on line 1 PHP Parse error:  syntax error, unexpected ';' in /var/www/html/14.x/lib/core/Tracker/Field/Computed.php(125) : eval()'d code on line 1 PHP Parse error:  syntax error, unexpected ';' in /var/www/html/14.x/lib/core/Tracker/Field/Computed.php(125) : eval()'d code on line 1 PHP Parse error:  syntax error, unexpected ';' in /var/www/html/14.x/lib/core/Tracker/Field/Computed.php(125) : eval()'d code on line 1
 ## * Version: trunk -------------------------------------- 
 ## ** Profile (1/32): Collaborative_Community_12x
-## ** Profile (2/32): Company_Intranet_12x</code></pre>
+## ** Profile (2/32): Company_Intranet_12x
+## ** Profile (3/32): Personal_Blog_and_Profile_12x
+## ** Profile (4/32): Small_Organization_Web_Presence_12x
+## ** Profile (5/32): Collaborative_Community_Wiki_menupage
+## ** Profile (6/32): Random_header_images_14
+## PHP Catchable fatal error:  Object of class Zend\Http\Header\Etag could not be converted to string in /var/www/html/trunk/lib/core/TikiDb/Pdo.php on line 75** Profile (7/32): Multilingual_Wiki_12x
+## ** Profile (8/32): Countries_By_Region
+## ** Profile (9/32): Mobile
+## ** Profile (10/32): Slideshow_demo
+## ** Profile (11/32): Together
+## ** Profile (12/32): Post-it_Sticky_Note
+## ** Profile (13/32): Debug_Mode_Enabled
+## ** Profile (14/32): Debug_Mode_Disabled
+## ** Profile (15/32): User_Trackers
+## ** Profile (16/32): Custom_Contact_Form
+## ** Profile (17/32): Dynamic_items_list
+## ** Profile (18/32): Sortable Tables
+## ** Profile (19/32): Bug_Tracker
+## ** Profile (20/32): Time_Sheet
+## ** Profile (21/32): Tracker_as_Calendar_12 
+## ** Profile (22/32): Voting_System
+## ** Profile (23/32): Structured Master Documents
+## ** Profile (24/32): Consensus Forums
+## ** Profile (25/32): Barter_Market
+## ** Profile (26/32): Revision Approval
+## ** Profile (27/32): Shoping_Cart
+## ** Profile (28/32): Easy GeoBlog
+## ** Profile (29/32): Cartograf
+## ** Profile (30/32): R_demo
+## ** Profile (31/32): R_Heatmaps
+## ** Profile (32/32): Conditional_Display_in_Forms_14
+## PHP Parse error:  syntax error, unexpected ';' in /var/www/html/trunk/lib/core/Tracker/Field/Computed.php(125) : eval()'d code on line 1 PHP Parse error:  syntax error, unexpected ';' in /var/www/html/trunk/lib/core/Tracker/Field/Computed.php(125) : eval()'d code on line 1 PHP Parse error:  syntax error, unexpected ';' in /var/www/html/trunk/lib/core/Tracker/Field/Computed.php(125) : eval()'d code on line 1 PHP Parse error:  syntax error, unexpected ';' in /var/www/html/trunk/lib/core/Tracker/Field/Computed.php(125) : eval()'d code on line 1</code></pre>
 <pre class="r"><code>#RRprofStop()
 # Uncomment to open the report
 #RRprofReport()</code></pre>
